# sibsutis-magistracy-2.2

GAPT_TPGU/: .gitignore
GAPT_TPGU/lab1/: cuda_driver.py  main.py  matrix_mul.cu
GAPT_TPGU/lab2/: cuda_driver.py  main.py  matrix_mul_bug.cu  matrix_mul_naive_bug.cu
GAPT_TPGU/lab3/: compile.bat  main.py  matrix_mul_spill.cu
NS_SPO/course_work_http_server/: CMakeLists.txt  vcpkg.json
NS_SPO/course_work_http_server/src/: http_response.hpp  http_server.hpp  http_session.hpp  http_status.hpp  main.cpp  mime_types.hpp  range.hpp
NS_SPO/lab7/: .gitignore  CMakeLists.txt  vcpkg.json
NS_SPO/lab7/src/: client.cpp  client_sync.cpp  server.cpp
OM_MO/: .gitignore  Cargo.toml
OM_MO/task_1,2_knapsack/: Cargo.toml
OM_MO/task_1,2_knapsack/src/: main.rs
OM_MO/task_11_fast_dijkstra/: Cargo.toml
OM_MO/task_11_fast_dijkstra/src/: main.rs  with_my_heap.rs
OM_MO/task_1_2_knapsack/: Cargo.toml
OM_MO/task_1_2_knapsack/src/: main.rs
OM_MO/task_3_brackets/: Cargo.toml
OM_MO/task_3_brackets/src/: main.rs
OM_MO/task_4_frog/: Cargo.toml
OM_MO/task_4_frog/src/: main.rs
OM_MO/task_5_dynamics/A_ladder/: main.cpp
OM_MO/task_5_dynamics/B_bunny/: main.cpp
OM_MO/task_5_dynamics/C_knight's_move/: main.cpp
OM_MO/task_5_dynamics/D_route_cost/: main.cpp
OM_MO/task_5_dynamics/E_descent_from_the_mountain/: main.cpp
OM_MO/task_6_dijkstra/: Cargo.toml
OM_MO/task_6_dijkstra/src/: main.rs
OM_MO/task_7_ford_bellman/: Cargo.toml
OM_MO/task_7_ford_bellman/src/: main.rs
OM_MO/task_8_kruskal/: Cargo.toml
OM_MO/task_8_kruskal/src/: main.rs
PM_UP/task_1/: report.docx
